--- a/hiera/site.yaml
+++ b/hiera/site.yaml
@@ -10,6 +10,7 @@ openstack::network::api: '192.168.11.0/24'
 openstack::network::external: '192.168.22.0/24'
 openstack::network::management: '172.16.33.0/24'
 openstack::network::data: '172.16.44.0/24'
+openstack::network::data_gateway: '172.16.44.1'
 
 openstack::network::external::ippool::start: 192.168.22.100
 openstack::network::external::ippool::end: 192.168.22.200
