--- a/hiera/site.yaml
+++ b/hiera/site.yaml
@@ -31,7 +31,7 @@ openstack::network::neutron::private: '192.168.55.0/24'
 ######## Fixed IPs (controllers)
 
 openstack::controller::address::api: '10.22.112.131'
-openstack::controller::address::management: '10.22.112.131'
+openstack::controller::address::management: '172.16.33.131'
 openstack::storage::address::api: '10.22.112.131'
 openstack::storage::address::management: '10.22.112.131'
 
@@ -39,7 +39,7 @@ openstack::storage::address::management: '10.22.112.131'
 
 openstack::mysql::root_password: 'spam-gak'
 openstack::mysql::service_password: 'fuva-wax'
-openstack::mysql::allowed_hosts: ['localhost', '127.0.0.1', '10.22.113.%', 'refspec%.vm.labs.scl3.mozilla.com']
+openstack::mysql::allowed_hosts: ['localhost', '127.0.0.1', '172.16.33.%', '10.22.113.%', 'refspec%.vm.labs.scl3.mozilla.com']
 
 ######## RabbitMQ
 
