--- a/hiera/site.yaml
+++ b/hiera/site.yaml
@@ -1,26 +1,18 @@
 openstack::region: 'openstack'
 
 ######## Networks
-#openstack::network::api: '192.168.11.0/24'
-#openstack::network::external: '192.168.22.0/24'
-#openstack::network::management: '172.16.33.0/24'
-#openstack::network::data: '172.16.44.0/24'
 
 openstack::network::api: '192.168.11.0/24'
 openstack::network::external: '192.168.22.0/24'
 openstack::network::management: '172.16.33.0/24'
 openstack::network::data: '172.16.44.0/24'
+
+# Temporary hack FIXME(uberj)
 openstack::network::data_gateway: '172.16.44.1'
 
 openstack::network::external::ippool::start: 192.168.22.100
 openstack::network::external::ippool::end: 192.168.22.200
-# TODO(uberj) is this right?
 openstack::network::external::gateway: 192.168.22.2
-#openstack::network::external::dns: 192.168.22.2
-
-#openstack::network::external::ippool::start: 10.22.113.200
-#openstack::network::external::ippool::end: 10.22.113.250
-#openstack::network::external::gateway: 10.22.112.132
 openstack::network::external::dns: 10.22.75.40
 
 ######## Private Neutron Network
