Use QEMU instead of KVM, no hardware virtualization for us

--- a/hiera/site.yaml
+++ b/hiera/site.yaml
@@ -80,7 +80,8 @@ openstack::swift::hash_suffix: 'pop-bang'
 
 ######## Nova
 
-openstack::nova::libvirt_type: 'kvm'
+# kvm needs Hardware Virtualization
+openstack::nova::libvirt_type: 'qemu'
 openstack::nova::password: 'quuk-paj'
 
 ######## Neutron
