--- a/hiera/site.yaml
+++ b/hiera/site.yaml
@@ -80,7 +80,7 @@ openstack::swift::hash_suffix: 'pop-bang'
 
 ######## Nova
 
-openstack::nova::libvirt_type: 'kvm'
+openstack::nova::libvirt_type: 'qemu'
 openstack::nova::password: 'quuk-paj'
 
 ######## Neutron
